command with brakets

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,4 +7,4 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./docker-compose.test.sh:/bin/docker-compose.test.sh
-    command: /bin/docker-compose.test.sh
+    command: [/bin/docker-compose.test.sh]
