change sut image name for amp-build

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   sut:
-    image: appcelerator/alpine
+    image: appcelerator/sut
     build:
       context: .
       dockerfile: Dockerfile
